GetCustomerProductHandler added
