# models/customer_product.go
@@ -1,10 +1,11 @@
 package models
 
 type CustomerProduct struct {
-	Customer_id uint64  `gorm:"primaryKey;"`
-	Product_id  uint64  `gorm:"primaryKey;"`
-	Quantity    uint64  `json:"quantity"`
-	TotalPrice  float32 `json:"total_price"`
+	Customer_product_id uint64  `gorm:"primaryKey;autoIncrement"`
+	Customer_id         uint64  `json:"customer_id"`
+	Product_id          uint64  `json:"product_id"`
+	Quantity            uint64  `json:"quantity"`
+	TotalPrice          float32 `json:"total_price"`
 }
 
 type CustomersProducts struct {
